[gd_scene load_steps=2 format=3 uid="uid://bkoutcgmat0jo"]

[ext_resource type="Script" path="res://src/UI/pause_menu.gd" id="1_bt2p8"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bt2p8")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 7.0
offset_right = 71.0
offset_bottom = 38.0
text = "PAUSE"

[node name="Overlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.2)

[node name="BackToGame" type="Button" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 34.0
offset_right = 59.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
text = "Back To Game"

[node name="Reset" type="Button" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -63.0
offset_right = 59.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Reset Game"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Overlay/BackToGame" to="." method="_on_back_to_game_pressed"]
[connection signal="pressed" from="Overlay/Reset" to="." method="_on_reset_pressed"]
